--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.3",
     "clsx": "^2.1.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.2",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "zod": "^3.22.4"
